--- a/package.json
+++ b/package.json
@@ -23,9 +23,21 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@hocuspocus/provider": "^3.4.4",
+    "@hocuspocus/transformer": "^3.4.4",
     "@modelcontextprotocol/sdk": "^1.25.3",
+    "@tiptap/core": "^3.18.0",
+    "@tiptap/extension-image": "^3.18.0",
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/html": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
+    "@types/jsdom": "^27.0.0",
     "axios": "^1.6.0",
     "form-data": "^4.0.0",
+    "jsdom": "^27.4.0",
+    "marked": "^17.0.1",
+    "ws": "^8.19.0",
+    "yjs": "^13.6.29",
     "zod": "^3.22.0"
   },
   "devDependencies": {
